# AlpShell

./: .gitignore  README.md
bootloader/: Makefile  main.asm
bootloader/src/: main.asm
parser_test/: main.cpp
parser_test/lexer/: lexer.cpp
parser_test/parser/: parser.cpp  parser.h
shell/: CMakeLists.txt  Makefile  main.cpp
shell/include/: auto_suggestion.h  command.h  executor.h  history.h  job_control.h  lexer.h  parser.h  prompt.h  shell.h  syntax_highlight.h  util.h
shell/src/: auto_suggestion.cpp  command.cpp  executor.cpp  history.cpp  job_control.cpp  lexer.cpp  main.cpp  parser.cpp  prompt.cpp  shell.cpp  syntax_highlight.cpp  util.cpp
